Update docs for batch and caching changes.

--- a/report_markers.html
+++ b/report_markers.html
@@ -23,7 +23,7 @@
     </script><div xmlns="" id="content">
 <h1>Markers (TODO / FIXME)</h1>
 <div id="marker-accordion">
-<h3><a href="#">Everyman/Neo4j/Command/Batch/Commit.php<small>1</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/Commit.php<small>2</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -34,6 +34,11 @@
 <td>todo</td>
 <td>6</td>
 <td>: Handle the case of empty body or body\data needing to be objects not arrays</td>
+</tr>
+<tr>
+<td>todo</td>
+<td>6</td>
+<td>: Is this really a batch command in itself, or something different?</td>
 </tr>
 </table></div>
 </div>
