--- a/report_parse_markers.html
+++ b/report_parse_markers.html
@@ -72,6 +72,34 @@
 <td>No DocBlock was found for File Everyman/Neo4j/Cache/Null.php</td>
 </tr>
 </table></div>
+<h3><a href="#">Everyman/Neo4j/Cache/EntityCache.php<small>4</small></a></h3>
+<div><table>
+<tr>
+<th>Type</th>
+<th>Line</th>
+<th>Description</th>
+</tr>
+<tr>
+<td>error</td>
+<td>1</td>
+<td>No DocBlock was found for File Everyman/Neo4j/Cache/EntityCache.php</td>
+</tr>
+<tr>
+<td>error</td>
+<td>16</td>
+<td>No DocBlock was found for Property $client</td>
+</tr>
+<tr>
+<td>error</td>
+<td>17</td>
+<td>No DocBlock was found for Property $cache</td>
+</tr>
+<tr>
+<td>error</td>
+<td>18</td>
+<td>No DocBlock was found for Property $cacheTimeout</td>
+</tr>
+</table></div>
 <h3><a href="#">Everyman/Neo4j/Cache/Memcached.php<small>2</small></a></h3>
 <div><table>
 <tr>
@@ -480,7 +508,7 @@
 <td>No DocBlock was found for File Everyman/Neo4j/Node.php</td>
 </tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Client.php<small>10</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Client.php<small>9</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -525,16 +553,11 @@
 <tr>
 <td>error</td>
 <td>16</td>
-<td>No DocBlock was found for Property $cache</td>
+<td>No DocBlock was found for Property $entityCache</td>
 </tr>
 <tr>
 <td>error</td>
 <td>17</td>
-<td>No DocBlock was found for Property $cacheTimeout</td>
-</tr>
-<tr>
-<td>error</td>
-<td>18</td>
 <td>No DocBlock was found for Property $serverInfo</td>
 </tr>
 </table></div>
@@ -1060,7 +1083,7 @@
 <td>No DocBlock was found for Property $node</td>
 </tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/Command.php<small>1</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/Command.php<small>3</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1072,8 +1095,18 @@
 <td>1</td>
 <td>No DocBlock was found for File Everyman/Neo4j/Command/Batch/Command.php</td>
 </tr>
+<tr>
+<td>error</td>
+<td>11</td>
+<td>No DocBlock was found for Property $base</td>
+</tr>
+<tr>
+<td>error</td>
+<td>12</td>
+<td>No DocBlock was found for Property $opId</td>
+</tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/CreateRelationship.php<small>5</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/CreateRelationship.php<small>3</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1088,25 +1121,15 @@
 <tr>
 <td>error</td>
 <td>14</td>
-<td>No DocBlock was found for Property $opId</td>
-</tr>
-<tr>
-<td>error</td>
-<td>15</td>
-<td>No DocBlock was found for Property $base</td>
-</tr>
-<tr>
-<td>error</td>
-<td>16</td>
 <td>No DocBlock was found for Property $batch</td>
 </tr>
 <tr>
 <td>error</td>
-<td>17</td>
+<td>15</td>
 <td>No DocBlock was found for Property $rel</td>
 </tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/UpdateNode.php<small>3</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/UpdateNode.php<small>1</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1118,18 +1141,8 @@
 <td>1</td>
 <td>No DocBlock was found for File Everyman/Neo4j/Command/Batch/UpdateNode.php</td>
 </tr>
-<tr>
-<td>error</td>
-<td>12</td>
-<td>No DocBlock was found for Property $opId</td>
-</tr>
-<tr>
-<td>error</td>
-<td>13</td>
-<td>No DocBlock was found for Property $base</td>
-</tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/RemoveFromIndex.php<small>3</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/RemoveFromIndex.php<small>1</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1141,18 +1154,8 @@
 <td>1</td>
 <td>No DocBlock was found for File Everyman/Neo4j/Command/Batch/RemoveFromIndex.php</td>
 </tr>
-<tr>
-<td>error</td>
-<td>14</td>
-<td>No DocBlock was found for Property $opId</td>
-</tr>
-<tr>
-<td>error</td>
-<td>15</td>
-<td>No DocBlock was found for Property $base</td>
-</tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/AddToIndex.php<small>5</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/AddToIndex.php<small>3</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1167,25 +1170,15 @@
 <tr>
 <td>error</td>
 <td>15</td>
-<td>No DocBlock was found for Property $opId</td>
-</tr>
-<tr>
-<td>error</td>
-<td>16</td>
-<td>No DocBlock was found for Property $base</td>
-</tr>
-<tr>
-<td>error</td>
-<td>17</td>
 <td>No DocBlock was found for Property $batch</td>
 </tr>
 <tr>
 <td>error</td>
-<td>18</td>
+<td>16</td>
 <td>No DocBlock was found for Property $entity</td>
 </tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/DeleteRelationship.php<small>3</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/DeleteRelationship.php<small>1</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1197,18 +1190,8 @@
 <td>1</td>
 <td>No DocBlock was found for File Everyman/Neo4j/Command/Batch/DeleteRelationship.php</td>
 </tr>
-<tr>
-<td>error</td>
-<td>12</td>
-<td>No DocBlock was found for Property $opId</td>
-</tr>
-<tr>
-<td>error</td>
-<td>13</td>
-<td>No DocBlock was found for Property $base</td>
-</tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/UpdateRelationship.php<small>3</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/UpdateRelationship.php<small>1</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1220,18 +1203,8 @@
 <td>1</td>
 <td>No DocBlock was found for File Everyman/Neo4j/Command/Batch/UpdateRelationship.php</td>
 </tr>
-<tr>
-<td>error</td>
-<td>12</td>
-<td>No DocBlock was found for Property $opId</td>
-</tr>
-<tr>
-<td>error</td>
-<td>13</td>
-<td>No DocBlock was found for Property $base</td>
-</tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/CreateNode.php<small>3</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/CreateNode.php<small>1</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1242,16 +1215,6 @@
 <td>error</td>
 <td>1</td>
 <td>No DocBlock was found for File Everyman/Neo4j/Command/Batch/CreateNode.php</td>
-</tr>
-<tr>
-<td>error</td>
-<td>12</td>
-<td>No DocBlock was found for Property $opId</td>
-</tr>
-<tr>
-<td>error</td>
-<td>13</td>
-<td>No DocBlock was found for Property $base</td>
 </tr>
 </table></div>
 <h3><a href="#">Everyman/Neo4j/Command/Batch/Commit.php<small>2</small></a></h3>
@@ -1268,11 +1231,11 @@
 </tr>
 <tr>
 <td>error</td>
-<td>12</td>
+<td>13</td>
 <td>No DocBlock was found for Property $batch</td>
 </tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Command/Batch/DeleteNode.php<small>3</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Command/Batch/DeleteNode.php<small>1</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -1283,16 +1246,6 @@
 <td>error</td>
 <td>1</td>
 <td>No DocBlock was found for File Everyman/Neo4j/Command/Batch/DeleteNode.php</td>
-</tr>
-<tr>
-<td>error</td>
-<td>12</td>
-<td>No DocBlock was found for Property $opId</td>
-</tr>
-<tr>
-<td>error</td>
-<td>13</td>
-<td>No DocBlock was found for Property $base</td>
 </tr>
 </table></div>
 <h3><a href="#">Everyman/Neo4j/Command/QueryIndex.php<small>1</small></a></h3>
