Update docs with transparent batch methods. #16

--- a/report_parse_markers.html
+++ b/report_parse_markers.html
@@ -508,7 +508,7 @@
 <td>No DocBlock was found for File Everyman/Neo4j/Node.php</td>
 </tr>
 </table></div>
-<h3><a href="#">Everyman/Neo4j/Client.php<small>9</small></a></h3>
+<h3><a href="#">Everyman/Neo4j/Client.php<small>10</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -559,6 +559,11 @@
 <td>error</td>
 <td>17</td>
 <td>No DocBlock was found for Property $serverInfo</td>
+</tr>
+<tr>
+<td>error</td>
+<td>18</td>
+<td>No DocBlock was found for Property $openBatch</td>
 </tr>
 </table></div>
 <h3><a href="#">Everyman/Neo4j/PropertyContainer.php<small>5</small></a></h3>
