--- a/db_Everyman_Neo4j_PropertyContainer.html
+++ b/db_Everyman_Neo4j_PropertyContainer.html
@@ -190,7 +190,7 @@
           )
         </span>
         :
-          boolean</code><div class="description">
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description">
 <span class="attribute">abstract</span><p class="short_description">Delete this entity</p>
 </div>
 <div class="code-tabs">
@@ -202,8 +202,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -342,7 +352,7 @@
           )
         </span>
         :
-          boolean</code><div class="description">
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description">
 <span class="attribute">abstract</span><p class="short_description">Load this entity</p>
 </div>
 <div class="code-tabs">
@@ -354,8 +364,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -367,10 +387,9 @@
           )
         </span>
         :
-          void</code><div class="description"><p class="short_description">Set up the properties array the first time we need it
-This includes loading the properties from the server
-if we can get them.</p></div>
-<div class="code-tabs"><div class="long-description">
+          void</code><div class="description"><p class="short_description">Set up the properties array the first time we need it</p></div>
+<div class="code-tabs"><div class="long-description"><p>This includes loading the properties from the server
+if we can get them.</p>
 </div></div>
 <div class="clear"></div>
 </div>
@@ -415,7 +434,7 @@ if we can get them.</p></div>
           )
         </span>
         :
-          boolean</code><div class="description">
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description">
 <span class="attribute">abstract</span><p class="short_description">Save this entity</p>
 </div>
 <div class="code-tabs">
@@ -427,8 +446,18 @@ if we can get them.</p></div>
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
