--- a/db_Everyman_Neo4j_Command.html
+++ b/db_Everyman_Neo4j_Command.html
@@ -174,7 +174,7 @@
           )
         </span>
         :
-          integer</code><div class="description"><p class="short_description">Run the command and return a value signalling the result</p></div>
+          mixed</code><div class="description"><p class="short_description">Run the command and return a value signalling the result</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -184,8 +184,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>integer</td>
-<td>on failure</td>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -341,7 +351,7 @@
           )
         </span>
         :
-          integer</code><div class="description">
+          mixed</code><div class="description">
 <span class="attribute">abstract</span><p class="short_description">Use the results in some way</p>
 </div>
 <div class="code-tabs">
@@ -375,8 +385,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>integer</td>
-<td>on failure</td>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
