--- a/db_Everyman_Neo4j_Command_Batch_Command.html
+++ b/db_Everyman_Neo4j_Command_Batch_Command.html
@@ -205,7 +205,7 @@
           )
         </span>
         :
-          integer</code><div class="description">
+          mixed</code><div class="description">
 <span class="attribute">inherited</span><p class="short_description">Run the command and return a value signalling the result</p>
 <small>Inherited from:
                     <a href="db_Everyman_Neo4j_Command.html#%5CEveryman%5CNeo4j%5CCommand::execute()">\Everyman\Neo4j\Command::execute()</a></small>
@@ -219,8 +219,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>integer</td>
-<td>on failure</td>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -386,7 +396,7 @@
           )
         </span>
         :
-          integer</code><div class="description"><p class="short_description">Use the results</p></div>
+          mixed</code><div class="description"><p class="short_description">Use the results</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -418,8 +428,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>integer</td>
-<td>on failure</td>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td>\Everyman\Neo4j\Command\Batch\Exception</td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -431,7 +451,7 @@
           )
         </span>
         :
-          void</code><div class="description"><p class="short_description">Handle a single result from the batch of results</p></div>
+          mixed</code><div class="description"><p class="short_description">Handle a single result from the batch of results</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -445,6 +465,26 @@
 <th>$result</th>
 <td>array</td>
 <td><em></em></td>
+</tr>
+</table>
+<strong>Returns</strong><table class="argument-info">
+<thead><tr>
+<th>Type</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td>\Everyman\Neo4j\Command\Batch\Exception</td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
