--- a/db_Everyman_Neo4j_Command_Batch_RemoveFromIndex.html
+++ b/db_Everyman_Neo4j_Command_Batch_RemoveFromIndex.html
@@ -235,7 +235,7 @@
           )
         </span>
         :
-          integer</code><div class="description">
+          mixed</code><div class="description">
 <span class="attribute">inherited</span><p class="short_description">Run the command and return a value signalling the result</p>
 <small>Inherited from:
                     <a href="db_Everyman_Neo4j_Command.html#%5CEveryman%5CNeo4j%5CCommand::execute()">\Everyman\Neo4j\Command::execute()</a></small>
@@ -249,8 +249,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>integer</td>
-<td>on failure</td>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -420,7 +430,7 @@
           )
         </span>
         :
-          integer</code><div class="description">
+          mixed</code><div class="description">
 <span class="attribute">inherited</span><p class="short_description">Use the results</p>
 <small>Inherited from:
                     <a href="db_Everyman_Neo4j_Command_Batch_Command.html#%5CEveryman%5CNeo4j%5CCommand%5CBatch%5CCommand::handleResult()">\Everyman\Neo4j\Command\Batch\Command::handleResult()</a></small>
@@ -456,8 +466,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>integer</td>
-<td>on failure</td>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td>\Everyman\Neo4j\Command\Batch\Exception</td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -469,7 +489,7 @@
           )
         </span>
         :
-          void</code><div class="description">
+          mixed</code><div class="description">
 <span class="attribute">inherited</span><p class="short_description">Handle a single result from the batch of results</p>
 <small>Inherited from:
                     <a href="db_Everyman_Neo4j_Command_Batch_Command.html#%5CEveryman%5CNeo4j%5CCommand%5CBatch%5CCommand::handleSingleResult()">\Everyman\Neo4j\Command\Batch\Command::handleSingleResult()</a></small>
@@ -487,6 +507,26 @@
 <th>$result</th>
 <td>array</td>
 <td><em></em></td>
+</tr>
+</table>
+<strong>Returns</strong><table class="argument-info">
+<thead><tr>
+<th>Type</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td>\Everyman\Neo4j\Command\Batch\Exception</td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
