--- a/db_Everyman_Neo4j_Command_GetRelationshipTypes.html
+++ b/db_Everyman_Neo4j_Command_GetRelationshipTypes.html
@@ -165,7 +165,7 @@
           )
         </span>
         :
-          integer</code><div class="description">
+          mixed</code><div class="description">
 <span class="attribute">inherited</span><p class="short_description">Run the command and return a value signalling the result</p>
 <small>Inherited from:
                     <a href="db_Everyman_Neo4j_Command.html#%5CEveryman%5CNeo4j%5CCommand::execute()">\Everyman\Neo4j\Command::execute()</a></small>
@@ -179,8 +179,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>integer</td>
-<td>on failure</td>
+<td>mixed</td>
+<td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -376,6 +386,16 @@
 <tr>
 <td>integer</td>
 <td>on failure</td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
