--- a/db_Everyman_Neo4j_Node.html
+++ b/db_Everyman_Neo4j_Node.html
@@ -225,7 +225,7 @@
           )
         </span>
         :
-          boolean</code><div class="description"><p class="short_description">Delete this node</p></div>
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description"><p class="short_description">Delete this node</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -235,8 +235,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -488,7 +498,7 @@
           )
         </span>
         :
-          boolean</code><div class="description"><p class="short_description">Load this node</p></div>
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description"><p class="short_description">Load this node</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -498,8 +508,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -512,13 +532,12 @@
         </span>
         :
           void</code><div class="description">
-<span class="attribute">inherited</span><p class="short_description">Set up the properties array the first time we need it
-This includes loading the properties from the server
-if we can get them.</p>
+<span class="attribute">inherited</span><p class="short_description">Set up the properties array the first time we need it</p>
 <small>Inherited from:
                     <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer::loadProperties()">\Everyman\Neo4j\PropertyContainer::loadProperties()</a></small>
 </div>
-<div class="code-tabs"><div class="long-description">
+<div class="code-tabs"><div class="long-description"><p>This includes loading the properties from the server
+if we can get them.</p>
 </div></div>
 <div class="clear"></div>
 </div>
@@ -607,7 +626,7 @@ if we can get them.</p>
           )
         </span>
         :
-          boolean</code><div class="description"><p class="short_description">Save this node</p></div>
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description"><p class="short_description">Save this node</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -617,8 +636,18 @@ if we can get them.</p>
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
