--- a/db_Everyman_Neo4j_Relationship.html
+++ b/db_Everyman_Neo4j_Relationship.html
@@ -285,7 +285,7 @@
           )
         </span>
         :
-          boolean</code><div class="description"><p class="short_description">Delete this relationship</p></div>
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description"><p class="short_description">Delete this relationship</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -295,8 +295,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -524,7 +534,7 @@
           )
         </span>
         :
-          boolean</code><div class="description"><p class="short_description">Load this relationship</p></div>
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description"><p class="short_description">Load this relationship</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -534,8 +544,18 @@
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
@@ -548,13 +568,12 @@
         </span>
         :
           void</code><div class="description">
-<span class="attribute">inherited</span><p class="short_description">Set up the properties array the first time we need it
-This includes loading the properties from the server
-if we can get them.</p>
+<span class="attribute">inherited</span><p class="short_description">Set up the properties array the first time we need it</p>
 <small>Inherited from:
                     <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer::loadProperties()">\Everyman\Neo4j\PropertyContainer::loadProperties()</a></small>
 </div>
-<div class="code-tabs"><div class="long-description">
+<div class="code-tabs"><div class="long-description"><p>This includes loading the properties from the server
+if we can get them.</p>
 </div></div>
 <div class="clear"></div>
 </div>
@@ -603,7 +622,7 @@ if we can get them.</p>
           )
         </span>
         :
-          boolean</code><div class="description"><p class="short_description">Save this node</p></div>
+          <a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></code><div class="description"><p class="short_description">Save this node</p></div>
 <div class="code-tabs">
 <div class="long-description">
 </div>
@@ -613,8 +632,18 @@ if we can get them.</p>
 <th>Description</th>
 </tr></thead>
 <tr>
-<td>boolean</td>
+<td><a href="db_Everyman_Neo4j_PropertyContainer.html#%5CEveryman%5CNeo4j%5CPropertyContainer">\Everyman\Neo4j\PropertyContainer</a></td>
 <td></td>
+</tr>
+</table>
+<strong>Throws</strong><table class="argument-info">
+<thead><tr>
+<th>Exception</th>
+<th>Description</th>
+</tr></thead>
+<tr>
+<td><a href="db_Everyman_Neo4j_Exception.html#%5CEveryman%5CNeo4j%5CException">\Everyman\Neo4j\Exception</a></td>
+<td><em>on failure</em></td>
 </tr>
 </table>
 </div>
